:lipstick: horizontal scroll correction

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,6 +1,5 @@
 .header__container {
     display: flex;
-    width: 100vw;
     height: 8.0rem; 
     align-items: center;
     justify-content: space-between;
